@@ -94,7 +94,8 @@ cmd_get_help (void)
 
 static void
 cmd_get_complete (urj_chain_t *chain, char ***matches, size_t *match_cnt,
-                  const char *text, size_t text_len, size_t token_point)
+                  char * const *tokens, const char *text, size_t text_len,
+                  size_t token_point)
 {
     switch (token_point)
     {
