@@ -80,7 +80,8 @@ cmd_help_help (void)
 
 static void
 cmd_help_complete (urj_chain_t *chain, char ***matches, size_t *match_cnt,
-                   const char *text, size_t text_len, size_t token_point)
+                   char * const *tokens, const char *text, size_t text_len,
+                   size_t token_point)
 {
     size_t i;
 
