@@ -103,7 +103,8 @@ cmd_include_help (void)
 
 static void
 cmd_include_complete (urj_chain_t *chain, char ***matches, size_t *match_cnt,
-                      const char *text, size_t text_len, size_t token_point)
+                      char * const *tokens, const char *text, size_t text_len,
+                      size_t token_point)
 {
 #ifdef HAVE_LIBREADLINE
     int state;
